--- a/docs/tests.tex
+++ b/docs/tests.tex
@@ -13,7 +13,7 @@ W tym rozdziale przedstawione są różne konfiguracje pakietów, wraz z wykresa
 % 	\caption{Odległość i kąt pomiędzy platformami w czasie.}
 % 	\end{figure} 
 % 
-% 	%TODO połączenie komponentów na UML, jak nie Tikz to Draw.io
+% 	%TODO połączenie komponentów na UML, jak nie Tikz to Draw.io, albo Dia.
 % 	
 % 	Takie ustawienie spowodowało ruch po okręgu o okresie ok. 32 s.
 % 	Modele początkowo posiadały zbliżoną pozycję i rotację, ale w miarę upływu czasu opóźnienia modelu dynamicznego stały się zauważalne.
