--- a/docs/readme
+++ b/docs/readme
@@ -5,7 +5,9 @@ Bullet ssie
 Gazebo bardzo dobrze działa
 
 WSTĘP:
-Poprawić grafikę producenta na wektorową.
+Poprawić grafikę producenta SICK na wektorową.
+Opisać, że komunikacja po Ethercacie, a lasery po ethernecie.
+Sekcja o IMU.
 
 MODEL:
 Pseudovelma jest symulowana silnikiem, więc pojedyncza precyzja.
@@ -14,12 +16,11 @@ Zrzut ekranu
 CZUJNIK:
 Opisać dokładnie obrazek.
 
-WSPOMAGACZE:
+KOMPONENTY:
 Opis budowy pakietów omni, pseudo i monokl.
 
 TESTY:
 Przypadki testowe, screeny i rozwiązania.
-Macierz w modelu kinematyki odwrotnej.
 
 Do zrobienia:
 Lalkarz nie przyjmuje nazwy odbiornika, jest zdefiniowana z góry
@@ -32,4 +33,7 @@ Monokl powinien mieć także masę.
 Dodać czujnik inercji <imu>, odpytać się o dane techniczne.
 Wypróbować "laser_scan_matcher".
 Gramofon chyba powinien mieć stałą częstotliwość zapisaną w Hz.
-Narysować jak dzielone są dane w pantofelku.
+Narysować, jak dzielone są dane w pantofelku.
+Czujnik imu (wymyślić nazwę)
+	Analog devices ADIS16460AMLZ
+	10160696 PH1724
