Stwórz kilka wykresów

--- a/docs/components.tex
+++ b/docs/components.tex
@@ -257,10 +257,10 @@ Komponenty modeli platform i czujnika laserowego, zostały opisane szczegółowo
 	=
 	\frac{1}{r}
 	\begin{bmatrix}
-	1 & -1 & 2(a+b) \\
-	1 & 1 & -2(a+b) \\
-	1 & -1 & -2(a+b) \\
-	1 & 1 & 2(a+b) \\
+	1 & -1 & \frac{a+b}{2} \\
+	1 & 1 & -\frac{a+b}{2} \\
+	1 & -1 & -\frac{a+b}{2} \\
+	1 & 1 & \frac{a+b}{2} \\
 	\end{bmatrix}
 	\begin{bmatrix}
 	v_y \\
