--- a/docs/readme
+++ b/docs/readme
@@ -68,4 +68,16 @@ plot \
 	linewidth 1 \
 	title "Omnivelma"
 
+>>> można rozpatrzyć ustawienie tego na kołach
+<inertial>
+	<mass>2.0</mass>
+	<inertia>
+		<ixx>0.0106</ixx>
+		<ixy>0</ixy>
+		<ixz>0</ixz>
+		<iyy>0.00572</iyy>
+		<iyz>0</iyz>
+		<izz>0.00572</izz>
+	</inertia>
+</inertial>
 
